# openbasement

./: .gitignore  Makefile  README.md  example.rd  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: api.md  cdm-patterns.md  generate_audit.py  generate_templates.py  getting-started.md  index.md  templates.md
src/openbasement/: __init__.py  audit.py  engine.py  matching.py  multilingual.py  namespaces.py  template.py  transforms.py  traversal.py
src/openbasement/templates/: eu_document.yaml  eu_procedure.yaml
tests/: conftest.py  download_fixtures.py  run_audit.py  test_extraction.py  test_fixtures_parse.py  test_follow.py  test_transforms.py  test_wildcard.py
tests/fixtures/: index.json
tests/fixtures/procedures/: 1965_1001.rdf  1971_1006.rdf  1971_1009.rdf  1972_1005.rdf  1972_1009.rdf  1973_1003.rdf  1974_1001.rdf  1974_1006.rdf  1974_1014.rdf  1974_1016.rdf  1975_1013.rdf  1975_1023.rdf  1975_1025.rdf  1976_1005.rdf  1976_1010.rdf  1976_1017.rdf  1976_1025.rdf  1976_1029.rdf  1977_1001.rdf  1977_1003.rdf  1977_1013.rdf  1977_1025.rdf  1977_1027.rdf  1977_1037.rdf  1977_1041.rdf  1978_1004.rdf  1978_1010.rdf  1978_1015.rdf  1978_1024.rdf  1978_1027.rdf  1979_1004.rdf  1979_1015.rdf  1979_1017.rdf  1979_1029.rdf  1980_1003.rdf  1980_1009.rdf  1980_1016.rdf  1980_1021.rdf  1980_1029.rdf  1980_1031.rdf  (+1901 more)
tests/fixtures/validation/: 1965_1001.json  1971_1006.json  1971_1009.json  1972_1005.json  1972_1009.json  1973_1003.json  1974_1001.json  1974_1006.json  1974_1014.json  1974_1016.json  1975_1013.json  1975_1023.json  1975_1025.json  (+1926 more)
(+1200 files in other folders)
